<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ui.profile.ProfileFragment"
    android:orientation="horizontal">



    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/profileFragmentContainer"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:padding="20dp">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailTextView"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logoutButton"
            android:layout_gravity="center"
            android:text="@string/log_out"/>



        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_logo"
            android:layout_gravity="center"
            android:contentDescription="@string/app_icon" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileLoginRedirectText"
        android:text="@string/already_an_user_login"
        android:layout_gravity="center"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_cardview"
        android:textSize="18sp"
        android:textColor="@color/black"/>


        <TextView
            android:id="@+id/profileSignupRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:padding="8dp"
            android:background="@drawable/custom_cardview"
            android:text="@string/not_yet_registered_signup"
            android:textColor="#5C6BC0"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>