<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ProductDetailFragment"
    >

    <TextView
        android:id="@+id/productTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:text="@string/product_title"
        android:textColor="#448AFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="200dp"
        android:id="@+id/productImageCardView"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        app:cardCornerRadius="25dp"
        app:cardElevation="8dp">

        <ImageView
            android:id="@+id/detailProductImage"
            android:layout_width="380dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/product_price"
        android:textColor="#448AFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_price"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        android:id="@+id/productPrice"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/product_description"
        android:textColor="#448AFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_description"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        android:id="@+id/productDescription"/>



</LinearLayout>