<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_logo"
                android:layout_gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fake_store_login"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/custom_cardview"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="8dp"
                    android:hint="Email"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="#5C6BC0" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_cardview"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="#5C6BC0" />


                <Button
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/login"
                    android:id="@+id/login_button"
                    android:textSize="18sp"
                    app:cornerRadius = "30dp"
                    tools:ignore="VisualLintButtonSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgot_password"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:padding="8dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/lavender"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/signupRedirectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="14dp"
                    android:padding="8dp"
                    android:text="@string/not_yet_registered_signup"
                    android:textColor="#5C6BC0"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>