<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="5dp"
    android:layout_width="match_parent"
    android:layout_height="280dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/custom_cardview"
        android:padding="4dp">


        <ImageView
            android:id="@+id/productImage"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:contentDescription="@string/product_image"
            android:scaleType="centerInside"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            tools:ignore="ImageContrastCheck" />


        <TextView
            android:id="@+id/productTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/product_title"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:hint="@string/product_price"
            android:textColorHint="#A1887F"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>